<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_call"
        android:title="@string/action_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sendmail"
        android:title="@string/action_sendmail"
        android:icon="@drawable/ic_baseline_email_24"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>